OpenBurnBarCore/Sources/OpenBurnBarDomainCore/Generated/openburnbar_domain_ffiFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
typedef void (*UniffiRustFutureContinuationCallback)(uint64_t, int8_t
    );
void ffi_openburnbar_domain_ffi_rust_future_cancel_i8(uint64_t handle
);
void ffi_openburnbar_domain_ffi_rust_future_free_i8(uint64_t handle
);
int8_t ffi_openburnbar_domain_ffi_rust_future_complete_i8(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_openburnbar_domain_ffi_rust_future_poll_u16(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_openburnbar_domain_ffi_rust_future_cancel_u16(uint64_t handle
);
void ffi_openburnbar_domain_ffi_rust_future_free_u16(uint64_t handle
);
uint16_t ffi_openburnbar_domain_ffi_rust_future_complete_u16(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_openburnbar_domain_ffi_rust_future_poll_i16(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_openburnbar_domain_ffi_rust_future_cancel_i16(uint64_t handle
);
void ffi_openburnbar_domain_ffi_rust_future_free_i16(uint64_t handle
);
int16_t ffi_openburnbar_domain_ffi_rust_future_complete_i16(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_openburnbar_domain_ffi_rust_future_poll_u32(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_openburnbar_domain_ffi_rust_future_cancel_u32(uint64_t handle
);
void ffi_openburnbar_domain_ffi_rust_future_free_u32(uint64_t handle
);
uint32_t ffi_openburnbar_domain_ffi_rust_future_complete_u32(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_openburnbar_domain_ffi_rust_future_poll_i32(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_openburnbar_domain_ffi_rust_future_cancel_i32(uint64_t handle
);
void ffi_openburnbar_domain_ffi_rust_future_free_i32(uint64_t handle
);
int32_t ffi_openburnbar_domain_ffi_rust_future_complete_i32(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_openburnbar_domain_ffi_rust_future_poll_u64(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_openburnbar_domain_ffi_rust_future_cancel_u64(uint64_t handle
);
void ffi_openburnbar_domain_ffi_rust_future_free_u64(uint64_t handle
);
uint64_t ffi_openburnbar_domain_ffi_rust_future_complete_u64(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_openburnbar_domain_ffi_rust_future_poll_i64(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_openburnbar_domain_ffi_rust_future_cancel_i64(uint64_t handle
);
void ffi_openburnbar_domain_ffi_rust_future_free_i64(uint64_t handle
);
int64_t ffi_openburnbar_domain_ffi_rust_future_complete_i64(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_openburnbar_domain_ffi_rust_future_poll_f32(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_openburnbar_domain_ffi_rust_future_cancel_f32(uint64_t handle
);
void ffi_openburnbar_domain_ffi_rust_future_free_f32(uint64_t handle
);
float ffi_openburnbar_domain_ffi_rust_future_complete_f32(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_openburnbar_domain_ffi_rust_future_poll_f64(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_openburnbar_domain_ffi_rust_future_cancel_f64(uint64_t handle
);
void ffi_openburnbar_domain_ffi_rust_future_free_f64(uint64_t handle
);
double ffi_openburnbar_domain_ffi_rust_future_complete_f64(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_openburnbar_domain_ffi_rust_future_poll_pointer(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_openburnbar_domain_ffi_rust_future_cancel_pointer(uint64_t handle
);
void ffi_openburnbar_domain_ffi_rust_future_free_pointer(uint64_t handle
);
void*_Nonnull ffi_openburnbar_domain_ffi_rust_future_complete_pointer(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_openburnbar_domain_ffi_rust_future_poll_rust_buffer(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_openburnbar_domain_ffi_rust_future_cancel_rust_buffer(uint64_t handle
);
void ffi_openburnbar_domain_ffi_rust_future_free_rust_buffer(uint64_t handle
);
RustBuffer ffi_openburnbar_domain_ffi_rust_future_complete_rust_buffer(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_openburnbar_domain_ffi_rust_future_poll_void(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_openburnbar_domain_ffi_rust_future_cancel_void(uint64_t handle
);
void ffi_openburnbar_domain_ffi_rust_future_free_void(uint64_t handle
);
void ffi_openburnbar_domain_ffi_rust_future_complete_void(uint64_t handle, RustCallStatus *_Nonnull out_status
);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_calculate_token_cost_nano_usd(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_aad_v1(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_aad_v2(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_aes_gcm_open_combined(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_aes_gcm_open_detached(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_aes_gcm_open_text_detached(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_aes_gcm_seal_combined(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_aes_gcm_seal_detached(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_base64_decode_strict(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_base64_encode(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_escrow_assemble_wire(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_escrow_open(void

);