tools/openburnbar-mcp/vendor/openburnbar-domain-core-python/openburnbar_domain_ffi.py

    ctypes.c_uint64,
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_cancel_i8.restype = None
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_free_i8.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_free_i8.restype = None
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_complete_i8.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_complete_i8.restype = ctypes.c_int8
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_poll_u16.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_poll_u16.restype = None
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_cancel_u16.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_cancel_u16.restype = None
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_free_u16.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_free_u16.restype = None
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_complete_u16.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_complete_u16.restype = ctypes.c_uint16
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_poll_i16.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_poll_i16.restype = None
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_cancel_i16.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_cancel_i16.restype = None
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_free_i16.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_free_i16.restype = None
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_complete_i16.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_complete_i16.restype = ctypes.c_int16
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_poll_u32.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_poll_u32.restype = None
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_cancel_u32.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_cancel_u32.restype = None
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_free_u32.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_free_u32.restype = None
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_complete_u32.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_complete_u32.restype = ctypes.c_uint32
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_poll_i32.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_poll_i32.restype = None
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_cancel_i32.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_cancel_i32.restype = None
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_free_i32.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_free_i32.restype = None
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_complete_i32.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_complete_i32.restype = ctypes.c_int32
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_poll_u64.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_poll_u64.restype = None
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_cancel_u64.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_cancel_u64.restype = None
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_free_u64.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_free_u64.restype = None
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_complete_u64.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_complete_u64.restype = ctypes.c_uint64
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_poll_i64.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_poll_i64.restype = None
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_cancel_i64.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_cancel_i64.restype = None
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_free_i64.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_free_i64.restype = None
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_complete_i64.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_complete_i64.restype = ctypes.c_int64
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_poll_f32.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_poll_f32.restype = None
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_cancel_f32.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_cancel_f32.restype = None
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_free_f32.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_free_f32.restype = None
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_complete_f32.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_complete_f32.restype = ctypes.c_float
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_poll_f64.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_poll_f64.restype = None
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_cancel_f64.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_cancel_f64.restype = None
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_free_f64.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_free_f64.restype = None
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_complete_f64.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_complete_f64.restype = ctypes.c_double
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_poll_pointer.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_poll_pointer.restype = None
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_cancel_pointer.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_cancel_pointer.restype = None
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_free_pointer.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_free_pointer.restype = None
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_complete_pointer.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_complete_pointer.restype = ctypes.c_void_p
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_poll_rust_buffer.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_poll_rust_buffer.restype = None
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_cancel_rust_buffer.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_cancel_rust_buffer.restype = None
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_free_rust_buffer.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_free_rust_buffer.restype = None
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_complete_rust_buffer.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_complete_rust_buffer.restype = _UniffiRustBuffer
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_poll_void.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_poll_void.restype = None
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_cancel_void.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_cancel_void.restype = None
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_free_void.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_free_void.restype = None
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_complete_void.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_complete_void.restype = None
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_calculate_token_cost_nano_usd.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_calculate_token_cost_nano_usd.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_aad_v1.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_aad_v1.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_aad_v2.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_aad_v2.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_aes_gcm_open_combined.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_aes_gcm_open_combined.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_aes_gcm_open_detached.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_aes_gcm_open_detached.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_aes_gcm_open_text_detached.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_aes_gcm_open_text_detached.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_aes_gcm_seal_combined.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_aes_gcm_seal_combined.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_aes_gcm_seal_detached.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_aes_gcm_seal_detached.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_base64_decode_strict.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_base64_decode_strict.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_base64_encode.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_base64_encode.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_escrow_assemble_wire.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_escrow_assemble_wire.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_escrow_open.argtypes = (
)
